--- a/thingstodo.html
+++ b/thingstodo.html
@@ -205,7 +205,7 @@
       <div class="col-md-12 text-center">
         <h3 class="header">Raffi's Place</h3>
         <p>
-          A Persian kabob place in Glendale. Very famous, very good. I'd suggest going in a group and ordering family style.
+          A Persian kabob place in Glendale. Very famous, very good. We'd suggest going in a group and ordering family style.
         </p>
       </div>
       <section class="section-padding">
@@ -225,7 +225,7 @@
       <div class="col-md-12 text-center">
         <h3 class="header">Papillon International Bakery</h3>
         <p>
-          I'm not sure exactly what cuisine these are, but the Perashki and Ponchik's here are some of the best. If you're from Seattle, it's easily better than Perashky Perashky. We like the potato or beef perashki and the Nutella ponchik.
+          We're not sure exactly what cuisine these are, but the Perashki and Ponchik's here are some of the best. If you're from Seattle, it's easily better than Perashky Perashky. We like the potato or beef perashki and the Nutella ponchik.
         </p>
       </div>
       <section class="section-padding">
@@ -234,6 +234,97 @@
             <div class="col-md-12">
               <div class="text-center">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.5131334710063!2d-118.26008482279077!3d34.133211913447866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0e382b0afa7%3A0x19f8a2587cfd8218!2sPapillon%20International%20Bakery!5e0!3m2!1sen!2sus!4v1681710063462!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Roma Italian Market</h3>
+        <p>
+          Featured in the New York Times, this shop is run by an Italian man in his late 80’s who wakes up early every morning to make fresh bread. He sells the best $6 Italian sandwiches, making it Clare and Jared’s favorite cheap lunch in Pasadena
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13205.57445332117!2d-118.1323278!3d34.1618528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c33e865e79b7%3A0xbf9bbc2b5fef508c!2sRoma%20Market!5e0!3m2!1sen!2sus!4v1689319840329!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Ahgassi Gopchang & Quarters</h3>
+        <p>
+          Venturing more into Los Angeles, there are two Korean BBQ places that we've been frequenting. Before you ask, no these are not all you can eat, but the quality of the meats is a lot better. Wait times may be long, but both are in the middle of Korea Town. Ahgassi Gopchang has a nice coffee shop in the same plaza, while Quarters has a Starbucks and some interesting retailers next to it.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.238647803767!2d-118.30651382409563!3d34.06339611714097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b89cb666c44d%3A0x822a072de7309428!2sAhgassi%20Gopchang!5e0!3m2!1sen!2sus!4v1689320083914!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.2142977164726!2d-118.30028392409564!3d34.064020417107905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c77d3cd03da3%3A0x34cb953bda09e5f9!2sQuarters%20Korean%20BBQ!5e0!3m2!1sen!2sus!4v1689320285382!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Marugame Monzo</h3>
+        <p>
+            There's plenty of good Japanese food in Little Tokyo, but this place has been our favorite. It is also not to be confused with Marugame Udon, which is a completely separate restaurant chain.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.7631188438245!2d-118.24262292409618!3d34.04994701785116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c647c386847d%3A0x78a11f51dfa1cac8!2sMarugame%20Monzo!5e0!3m2!1sen!2sus!4v1689320908540!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Taco Trucks - El Chato & Leo's</h3>
+        <p>
+          Need some late night tacos? Try either of these. El Chato is better overall, however the tacos are slightly smaller and slightly more expensive than other taco trucks. Beware that it is also cash only.
+          Leo's has some very good Al Pastor. It always comes with a slice of pineapple. Leo's and El Chato are very close to each other if you're interested in both.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.4874646030103!2d-118.35116501420909!3d34.057016248275225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b91df7cec9ad%3A0x217bb01b6c5ae21c!2sEl%20Chato%20Taco%20Truck!5e0!3m2!1sen!2sus!4v1689321443722!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65109.39702706201!2d-118.40304234325782!3d34.061078866798915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b8fe187624bf%3A0x371a087d6b899d8b!2sLeo&#39;s%20Tacos%20Truck!5e0!3m2!1sen!2sus!4v1689321542522!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
