--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>Clare & Jared are getting married!</title>
-    <meta name="description" content="We would like to invite you to our big day.">
+    <meta name="description" content="Wada wedding. Jared Wada wedding. Clare Moore wedding. Jared and Clare Wada wedding.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Clare & Jared are getting married!">
