Add dress code/ schedule

--- a/index.html
+++ b/index.html
@@ -117,6 +117,50 @@
     </div>
 </section>
 
+<section id="attire">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">Dress Code</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>
+                   Please come dressed in cocktail attire.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="schedule">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">Schedule</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center" style="text-align:center">
+                <p style="text-align: left; display: inline-block">
+                    5pm: Wedding Ceremony
+                    <br>
+                    6pm: Cocktail Hour - Hors d'oeuvres and open bar begins
+                    <br>
+                    7pm: Reception begins
+                    <br>
+                    9pm: Dessert and Dancing - <a href="https://aftersicecream.com/">Afters</a> ice cream bar and street taco stand
+                    <br>
+                    10pm: Open Bar closes
+                    <br>
+                    11pm: Goodbyes - Venue closes
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="instagram" class="section-padding">
     <div class="container">
         <div class="row">
@@ -337,9 +381,9 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3 title="Clare insisted on this pun"><i>Wada</i> you waiting for?</h3>
-                <p><b>
+                <p style="text-align: center"><b style="text-align:left; display: inline-block">
                     We would greatly appreciate if you could RSVP before the 1st of September '23
-                    <br> Please find the invite code on your invitation
+                    <br> Please find the invite code on the back of your invitation
                     <br> You may use the same email address for multiple people
                     <br> There will also be a prime rib station at dinner in addition to your meal choice
                 </b></p>
