Add dress code/ schedule

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <br>
                     7pm: Reception begins
                     <br>
-                    9pm: Dessert and Dancing - <a href="https://aftersicecream.com/">Afters</a> ice cream bar and street taco stand
+                    9pm: Dessert and Dancing - Cake cutting and <a href="https://aftersicecream.com/">Afters</a> ice cream stand and street taco stand begins
                     <br>
                     10pm: Open Bar closes
                     <br>
@@ -383,7 +383,7 @@
                 <h3 title="Clare insisted on this pun"><i>Wada</i> you waiting for?</h3>
                 <p style="text-align: center"><b style="text-align:left; display: inline-block">
                     We would greatly appreciate if you could RSVP before the 1st of September '23
-                    <br> Please find the invite code on the back of your invitation
+                    <br> Please find the invite code on your invitation
                     <br> You may use the same email address for multiple people
                     <br> There will also be a prime rib station at dinner in addition to your meal choice
                 </b></p>
