--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <br>
                     7pm: Reception begins
                     <br>
-                    9pm: Dessert and Dancing - Cake cutting and <a href="https://aftersicecream.com/">Afters</a> ice cream stand and street taco stand begins
+                    9pm: Dessert and Dancing - Cake cutting and <a href="https://aftersicecream.com/"><b>Afters</b></a> ice cream stand and street taco stand begins
                     <br>
                     10pm: Open Bar closes
                     <br>
@@ -270,9 +270,9 @@
     <div class="text-center">
         <h3>How do I get there?</h3>
         <p>It's way easier than you think! <br>
-        <a href="/thingstodo.html">Check out some of our favorite things in the area here!</a>
+        <a href="/thingstodo.html"><b>Check out some of our favorite things in the area here!</b></a>
         <br>
-        <a href="/hotels.html">Looking for a place to stay? Click here for some recommendations</a>
+        <a href="/hotels.html"><b>Looking for a place to stay? Click here for some recommendations</b></a>
         </p>
 
 
@@ -298,7 +298,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <h5>Castaway Burbank</h5>
-                            <p><a href="https://maps.apple.com/?q=34.2042000681,-118.302994022">1250 E Harvard Rd, Burbank, CA 91501, United States</a></p>
+                            <p><a href="https://maps.apple.com/?q=34.2042000681,-118.302994022"><b>1250 E Harvard Rd, Burbank, CA 91501, United States</b></a></p>
                         </div>
                     </div>
                     <div class="row text-center">
