--- a/hotels.html
+++ b/hotels.html
@@ -81,14 +81,16 @@
     </div>
     <div class="row">
       <div class="col-md-12 text-center">
-        <h4 class="header">Here's some hotels you can look at while you stay in town for our wedding!</h4>
+        <h4 class="header">
+          Here's some hotels you can look at while you stay in town for our wedding!
+        </h4>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12 text-center">
-        <h3 class="header">Round 1</h3>
+        <h3 class="header">Marriott Residence Inn Glendale</h3>
         <p>
-          This Japanese arcade is located in Burbank. It has tons of arcade games, bowling, billiards, and karaoke!
+          Check out a direct link <a target="_blank" rel="noopener noreferrer" href="https://www.marriott.com/en-us/hotels/laxrl-residence-inn-los-angeles-glendale/overview/">here!</a>
         </p>
       </div>
       <section class="section-padding">
@@ -96,7 +98,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="text-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.548656886737!2d-118.31476792277778!3d34.18345551078828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c295df7fb8e317%3A0x9ae4021ab7846c!2sRound1%20Bowling%20%26%20Amusement!5e0!3m2!1sen!2sus!4v1681706941991!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.941184975415!2d-118.25545112409276!3d34.14784681267581!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c055533935af%3A0xeeef1ed68b917b44!2sResidence%20Inn%20by%20Marriott%20Los%20Angeles%20Glendale!5e0!3m2!1sen!2sus!4v1689659638695!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
@@ -106,9 +108,10 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
-        <h3 class="header">Huntington Gardens</h3>
+        <h3 class="header">The Glenmark, Glendale, a Tribute Portofolio Hotel</h3>
         <p>
-          A botanical garden in the Pasadena area
+          Check out a direct link <a target="_blank" rel="noopener noreferrer" href="https://www.marriott.com/en-us/hotels/laxtg-the-glenmark-glendale-a-tribute-portfolio-hotel/overview/">
+          here!</a>
         </p>
       </div>
       <section class="section-padding">
@@ -116,7 +119,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="text-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9341.683728425474!2d-118.11795065894525!3d34.12628023795939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2db4d02615c73%3A0xb328d70c295f1904!2sThe%20Huntington%20Library%2C%20Art%20Museum%2C%20and%20Botanical%20Gardens!5e0!3m2!1sen!2sus!4v1681708572921!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.396874015431!2d-118.2572146240922!3d34.1617694119387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c04c916dada9%3A0x2c778335d3040559!2sThe%20Glenmark%2C%20Glendale%2C%20a%20Tribute%20Portfolio%20Hotel!5e0!3m2!1sen!2sus!4v1689663359763!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
@@ -126,9 +129,10 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
-        <h3 class="header">The Americana</h3>
+        <h3 class="header">Residence Inn by Marriott Los Angeles Pasadena/Downtown</h3>
         <p>
-          A shopping mall in Glendale - lots of good food and stores!
+          Check out a direct link <a target="_blank" rel="noopener noreferrer" href="https://www.marriott.com/en-us/hotels/laxro-residence-inn-los-angeles-pasadena-old-town/overview/">
+          here!</a>
         </p>
       </div>
       <section class="section-padding">
@@ -136,42 +140,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="text-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.1052188050166!2d-118.25810622279049!3d34.14365011289566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0feef870c89%3A0xadffaf4a6862f04c!2sThe%20Americana%20at%20Brand!5e0!3m2!1sen!2sus!4v1681708797770!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
-
-  </div>
-</section>
-
-<section id="food">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h3 class="header">Food</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h4 class="header">Here's some of our favorite food places around the Glendale/Burbank/Pasadena area!</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h3 class="header">Eggslut</h3>
-        <p>
-          This egg sandwich place is super popular in Downtown LA. Try this much less busy location in the Glendale Americana. Also, there's a Philz Coffee next to it.
-        </p>
-      </div>
-      <section class="section-padding">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="text-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.1347349617286!2d-118.25709122279063!3d34.14289491293566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0fe6e611f9b%3A0xf7b81da683dadfa2!2sEggslut!5e0!3m2!1sen!2sus!4v1681709165438!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.8464080538924!2d-118.15342192409265!3d34.150271412547546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c373aeab877d%3A0xd3ecd33660f6e107!2sResidence%20Inn%20by%20Marriott%20Los%20Angeles%20Pasadena%2FOld%20Town!5e0!3m2!1sen!2sus!4v1689663688341!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
@@ -181,9 +150,10 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
-        <h3 class="header">Pepper Lunch</h3>
+        <h3 class="header">The Bissell House Bed and Breakfast, Pasadena CA</h3>
         <p>
-          A sizzling plate Japanese restaurant. As the name suggests, the food is pretty peppery and it all comes out on a ripping hot teppanyaki plate.
+          Check out a direct link <a target="_blank" rel="noopener noreferrer" href="https://bissellhouse.com">
+          here!</a>
         </p>
       </div>
       <section class="section-padding">
@@ -191,7 +161,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="text-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211456.53727842416!2d-118.43188762664796!3d34.09492539211247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c505794a24c9%3A0x2e1de7e15633de8e!2sPepper%20Lunch!5e0!3m2!1sen!2sus!4v1681709362730!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.884038911178!2d-118.16101032409348!3d34.12371831395253!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c48767fae241%3A0x88e17bb019ffe5f3!2sBissell%20House%20Bed%20%26%20Breakfast!5e0!3m2!1sen!2sus!4v1689663916291!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
@@ -201,9 +171,10 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
-        <h3 class="header">Raffi's Place</h3>
+        <h3 class="header">Glendale Express Hotel</h3>
         <p>
-          A Persian kabob place in Glendale. Very famous, very good. I'd suggest going in a group and ordering family style.
+          Check out a direct link <a target="_blank" rel="noopener noreferrer" href="https://reservations.oso.co/?adult=1&arrive=2023-10-07&chain=29055&child=0&currency=USD&depart=2023-10-08&hotel=9799&level=hotel&locale=en-US&rooms=1">
+          here!</a>
         </p>
       </div>
       <section class="section-padding">
@@ -211,7 +182,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="text-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.9956799775414!2d-118.25822550537141!3d34.146452643452804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0ffe618e84f%3A0xb4904f6dc49a8c74!2sRaffi&#39;s%20Place!5e0!3m2!1sen!2sus!4v1681709713624!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.664776811138!2d-118.2661093240923!3d34.15491751230157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c05aa81e78f7%3A0xe886c56615862fa8!2sGlendale%20Express%20Hotel!5e0!3m2!1sen!2sus!4v1689664057807!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
@@ -221,24 +192,17 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
-        <h3 class="header">Papillon International Bakery</h3>
+        <h3 class="header">Airbnb Or VRBO</h3>
         <p>
-          I'm not sure exactly what cuisine these are, but the Perashki and Ponchik's here are some of the best. If you're from Seattle, it's easily better than Perashky Perashky. We like the potato or beef perashki and the Nutella ponchik.
+          As you might have been able to tell, we know much more about the Glendale and Pasadena area than we do the Burbank area.
+          If any of the hotels above do not match all of your criteria for a stay, then we recommend finding an Airbnb or VRBO in the Glendale or Pasadena area.
+          <br>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.vrbo.com">VRBO Link</a>
+          <br>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.airbnb.com">Airbnb Link</a>
         </p>
       </div>
-      <section class="section-padding">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="text-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.5131334710063!2d-118.26008482279077!3d34.133211913447866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0e382b0afa7%3A0x19f8a2587cfd8218!2sPapillon%20International%20Bakery!5e0!3m2!1sen!2sus!4v1681710063462!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
     </div>
-
 
   </div>
 </section>
