--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="col-md-12 text-center">
                 <h3>A picture is worth a thousand words!</h3>
                 <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagram.com/explore/tags/wadawedding/" target="_blank">#WadaWedding</a>
+                    <a href="https://instagram.com/explore/tags/wadawedding/" target="_blank" rel="noopener noreferrer"><b>#WadaWedding</b></a>
                 </p>
             </div>
         </div>
@@ -281,7 +281,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="collapse text-center" id="testmap">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3299.736773793258!2d-118.30751666420909!3d34.20420135499706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c29532551f4bfb%3A0xfa5bbdb4a2b189fc!2sCastaway%20Restaurant%20%26%20Events!5e0!3m2!1sen!2sus!4v1676839714131!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen=":wtrue" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3299.736773793258!2d-118.30751666420909!3d34.20420135499706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c29532551f4bfb%3A0xfa5bbdb4a2b189fc!2sCastaway%20Restaurant%20%26%20Events!5e0!3m2!1sen!2sus!4v1676839714131!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="false" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -329,7 +329,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <a rel="group" href="https://www.amazon.com/wedding/jared-wada-clare-moore-burbank-october-2023/registry/2ULRXFSJFO0NW">
+                    <a href="https://www.amazon.com/wedding/jared-wada-clare-moore-burbank-october-2023/registry/2ULRXFSJFO0NW" target="_blank" rel="group noopener noreferrer">
                         <div class="img-wrap">
                             <img src="img/amazon.png" alt="amazon" style="width:250x;height:150px;"/>
                         </div>
@@ -343,7 +343,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 text-center">
-                    <a class="fancybox" rel="group" href="https://venmo.com/u/Jared-Wada">
+                    <a class="fancybox" href="https://venmo.com/u/Jared-Wada" target="_blank" rel="group noopener noreferrer">
                         <div class="img-wrap">
                             <img src="img/venmo.png" alt="venmo" style="width:250px;height:150px;"/>
                         </div>
@@ -382,11 +382,14 @@
             <div class="col-md-8 col-md-offset-2">
                 <h3 title="Clare insisted on this pun"><i>Wada</i> you waiting for?</h3>
                 <p style="text-align: center"><b style="text-align:left; display: inline-block">
-                    We would greatly appreciate if you could RSVP before the 1st of September '23
-                    <br> Please find the invite code on your invitation
-                    <br> You may use the same email address for multiple people
-                    <br> There will also be a prime rib station at dinner in addition to your meal choice
-                </b></p>
+                    <ul>
+                        <li>We would greatly appreciate if you could RSVP before the 1st of September '23</li>
+                        <li>Please find the invite code on your invitation</li>
+                        <li>You may use the same email address for multiple people</li>
+                        <li>There will also be a prime rib station at dinner in addition to your meal choice</li>
+                    </ul>
+                    </b>
+                </p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
