--- a/index.html
+++ b/index.html
@@ -369,7 +369,13 @@
                     </button>
                     <div class="section-padding">
                         <h3>Thank you!</h3>
-                        <p>We are glad to see you join us on our big day.</p>
+                        <p>
+                            We are glad to see you join us on our big day.
+                            <br>
+                            You should receive an email confirmation shortly.
+                            <br>
+                            If you do not see your confirmation, please check your spam folder.
+                        </p>
                         <div id="add-to-cal"></div>
                     </div>
                 </div>
