font weight for text

--- a/index.html
+++ b/index.html
@@ -472,12 +472,12 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
-                            <button class="btn-fill rsvp-btn" style="background-color:#d5e7bd" value="true" type="submit">
+                            <button class="btn-fill rsvp-btn" style="background-color:#d5e7bd; font-weight: 600" value="true" type="submit">
                                 RSVP Yes
                             </button>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <button class="btn-fill rsvp-btn" style="background-color:#e7bdd5" value="false" type="submit">
+                            <button class="btn-fill rsvp-btn" style="background-color:#e7bdd5; font-weight: 600" value="false" type="submit">
                                 RSVP NO
                             </button>
                         </div>
