update things to do

--- a/thingstodo.html
+++ b/thingstodo.html
@@ -163,6 +163,27 @@
     </div>
     <div class="row">
       <div class="col-md-12 text-center">
+        <h3 class="header">Philz Coffee</h3>
+        <p>
+          Our favorite coffee place in LA. We always keep a stock of beans to use for the smoothest batch of siphon coffee in the morning.
+          Philz mostly does pour overs, but does have a few cold brew options as well. For our suggestion on blends - Our everyday cup is the dark roast Jacob's Wonderbar.
+          For medium roasts, we like the Tesora and the Philtered Soul. There's quite a few locations throughout LA, including Glendale, Pasadena, and El Segundo.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105668.11909530523!2d-118.40710401535034!3d34.14304876863033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0fe50f84d1f%3A0x459ae3a4046d10d!2sPhilz%20Coffee!5e0!3m2!1sen!2sus!4v1692810365885!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
         <h3 class="header">Eggslut</h3>
         <p>
           This egg sandwich place is super popular in Downtown LA. Try this much less busy location in the Glendale Americana. Also, there's a Philz Coffee next to it.
@@ -243,6 +264,26 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
+        <h3 class="header">Paper Rice</h3>
+        <p>
+          This place is like Chipotle, but for spring rolls. Have fun building your own! One of our favorite places to get a healthy meal.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13207.946015993608!2d-118.1498734!3d34.1466874!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c33bc8b4c193%3A0x38943d2484a08c2a!2sPaper%20Rice!5e0!3m2!1sen!2sus!4v1692809494368!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
         <h3 class="header">Roma Italian Market</h3>
         <p>
           Featured in the New York Times, this shop is run by an Italian man in his late 80’s who wakes up early every morning to make fresh bread. He sells the best $6 Italian sandwiches, making it Clare and Jared’s favorite cheap lunch in Pasadena
@@ -263,9 +304,28 @@
 
     <div class="row">
       <div class="col-md-12 text-center">
+        <h3 class="header">Oakobing</h3>
+        <p>
+          Korean shaved ice, also known as bingsu. The large sizes can come out in hollowed out fruit! Our favorites include the Mango Melon, Strawberry Cheesecake, and Injeolmi.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.9910315208194!2d-118.14782722520403!3d34.14657156888394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c3c76a6eda79%3A0xa0e52a8b83c189eb!2sOakobing!5e0!3m2!1sen!2sus!4v1692809971008!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
         <h3 class="header">Ahgassi Gopchang & Quarters</h3>
         <p>
-          Venturing more into Los Angeles, there are two Korean BBQ places that we've been frequenting. Before you ask, no these are not all you can eat, but the quality of the meats is a lot better. Wait times may be long, but both are in the middle of Korea Town. Ahgassi Gopchang has a nice coffee shop in the same plaza, while Quarters has a Starbucks and some interesting retailers next to it.
+          Venturing more into Los Angeles, there are two Korean BBQ places that we've been frequenting. Before you ask, no these are not all you can eat, but the quality of the meats is a lot better. Wait times may be long, but both are in the middle of Korea Town. Ahgassi Gopchang has a nice coffee shop in the same plaza, while Quarters has a Starbucks and some interesting retailers next to it. There is also an Oakobing very close to these two for a dessert after.
         </p>
       </div>
       <section class="section-padding">
