--- a/index.html
+++ b/index.html
@@ -318,6 +318,23 @@
     </div>
 </section>
 
+<section id="parking">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">Parking</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>
+                    There will be valet parking at the venue. Please let the valet attendants know that you are there for our wedding as it is covered by us!
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="registry" class="section-padding">
     <div class="container">
         <div class="row">
